[package]
name = "glowbarn"
version = "2.0.0"
edition = "2021"
authors = ["bad-antics"]
description = "Multi-Sensor Anomaly Detection System - High Performance Native Application"
license = "MIT"
repository = "https://github.com/bad-antics/glowbarn"
keywords = ["anomaly-detection", "entropy", "paranormal", "sensors", "signal-processing"]
categories = ["science", "visualization", "hardware-support"]
exclude = ["dist/", "pkg/", "target/", "*.tar.gz", "*.deb", "*.asc", "glowbarn-linux-*"]

[features]
default = ["gui", "gpu"]
gui = ["eframe", "egui", "egui_plot"]
gpu = ["wgpu", "bytemuck"]
audio = ["cpal", "rubato"]
serial = ["serialport"]
hardware = ["i2cdev", "spidev"]
full = ["gui", "gpu", "audio", "serial", "hardware", "ml"]
ml = ["candle-core", "candle-nn"]

[dependencies]
# Core
tokio = { version = "1.35", features = ["full", "sync", "time", "rt-multi-thread", "macros"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
crossbeam = "0.8"
rayon = "1.8"
parking_lot = "0.12"

# GUI Framework
eframe = { version = "0.25", optional = true, default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = { version = "0.25", optional = true }
egui_plot = { version = "0.25", optional = true }

# GPU Compute
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

# Math & Signal Processing
nalgebra = "0.32"
ndarray = { version = "0.15", features = ["rayon"] }
rustfft = "6.1"
realfft = "3.3"
num-complex = "0.4"
num-traits = "0.2"
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"

# Audio
cpal = { version = "0.15", optional = true }
rubato = { version = "0.14", optional = true }

# Serial/Hardware (all optional)
serialport = { version = "4.3", optional = true }
i2cdev = { version = "0.6", optional = true }
spidev = { version = "0.6", optional = true }

# Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
rumqttc = "0.23"

# Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }
sled = "0.34"

# Cryptography & Security
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging & Errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# System
libc = "0.2"
dirs = "5.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# System info
sysinfo = "0.30"

# ML (optional)
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libudev = { version = "0.3", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Devices_HumanInterfaceDevice"], optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

